@@ -1,4 +1,4 @@
-/* $Id: raw_100.c,v 1.5.4.3.2.8 2010/09/29 06:23:48 uehira Exp $ */
+/* $Id: raw_100.c,v 1.5.4.3.2.9 2010/10/12 06:54:35 uehira Exp $ */
 /* "raw_100.c"    97.6.23 - 6.30 urabe */
 /*                  modified from raw_raw.c */
 /*                  97.8.4 bug fixed (output empty block) */
@@ -8,19 +8,22 @@
 /*                  2000.3.21 c_save=shr->c; bug fixed */
 /*                  2000.4.24/2001.11.14 strerror() */
 /*                  2005.2.20 added fclose() in read_chfile() */
+/*                  2010.10.12 64bit clean. eobsize_in(auto) (uehira) */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
+
+#include <sys/types.h>
+#include <sys/ipc.h>
+#include <sys/shm.h>
 
 #include <stdio.h>
 #include <signal.h>
 #include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
-#include <sys/types.h>
-#include <sys/ipc.h>
-#include <sys/shm.h>
+#include <errno.h>
 
 #if TIME_WITH_SYS_TIME
 #include <sys/time.h>
@@ -33,9 +36,6 @@
 #endif  /* !HAVE_SYS_TIME_H */
 #endif  /* !TIME_WITH_SYS_TIME */
 
-#include <sys/types.h>
-#include <errno.h>
-
 #include "winlib.h"
 
 /* #define DEBUG       0 */
@@ -44,17 +44,27 @@
 #define SR_LOWER   50
 #define SR        100
 
-long buf_raw[MAX_SR];
-unsigned char ch_table[WIN_CHMAX];
-char *progname,*logfile,chfile[256];
-int n_ch,negate_channel;
+static const char rcsid[] =
+  "$Id: raw_100.c,v 1.5.4.3.2.9 2010/10/12 06:54:35 uehira Exp $";
+
+static uint8_w ch_table[WIN_CHMAX];
+static char chfile[256];
+static int n_ch,negate_channel;
+
+char *progname,*logfile;
 int syslog_mode=0, exit_status;
 
+/* prototypes */
+static void read_chfile(void);
+int main(int, char *[]);
+
+static void
 read_chfile()
   {
   FILE *fp;
   int i,j,k;
   char tbuf[1024];
+
   if(*chfile)
     {
     if((fp=fopen(chfile,"r"))!=NULL)
@@ -65,7 +75,7 @@ read_chfile()
       if(negate_channel) for(i=0;i<WIN_CHMAX;i++) ch_table[i]=1;
       else for(i=0;i<WIN_CHMAX;i++) ch_table[i]=0;
       i=j=0;
-      while(fgets(tbuf,1024,fp))
+      while(fgets(tbuf,sizeof(tbuf),fp))
         {
         if(*tbuf=='#' || sscanf(tbuf,"%x",&k)<0) continue;
         k&=0xffff;
@@ -94,8 +104,8 @@ read_chfile()
       fprintf(stderr,"\n");
 #endif
       n_ch=j;
-      if(negate_channel) sprintf(tbuf,"-%d channels",n_ch);
-      else sprintf(tbuf,"%d channels",n_ch);
+      if(negate_channel) snprintf(tbuf,sizeof(tbuf),"-%d channels",n_ch);
+      else snprintf(tbuf,sizeof(tbuf),"%d channels",n_ch);
       write_log(tbuf);
       fclose(fp);
       }
@@ -104,7 +114,7 @@ read_chfile()
 #if DEBUG
       fprintf(stderr,"ch_file '%s' not open\n",chfile);
 #endif
-      sprintf(tbuf,"channel list file '%s' not open",chfile);
+      snprintf(tbuf,sizeof(tbuf),"channel list file '%s' not open",chfile);
       write_log(tbuf);
       write_log("end");
       exit(1);
@@ -119,22 +129,25 @@ read_chfile()
   signal(SIGHUP,(void *)read_chfile);
   }
 
-main(argc,argv)
-  int argc;
-  char *argv[];
+int
+main(int argc, char *argv[])
   {
   struct Shm  *shr,*shm;
   key_t rawkey,monkey;
   /* int shmid_raw,shmid_mon; */
-  unsigned long uni;
+  uint32_w uni;
   char tb[100];
-  unsigned char *ptr,*ptw,*ptr_lim,*ptr_save;
-  int sr,i,j,size,size_shm,tow,rest;
+  uint8_w *ptr,*ptw,*ptr_lim,*ptr_save;
+  int  i,j,tow,rest;
+  int eobsize_in, eobsize_in_count;
+  size_t  size_shm;
+  WIN_sr  sr;
+  uint32_w  size;
   WIN_ch  ch1;
   WIN_sr  sr1;
-  unsigned long c_save;
-  unsigned short ch;
-  int gs,gh;
+  unsigned long c_save;  /* 64bit ok */
+  WIN_ch ch;
+  uint32_w gs;
   static int32_w buf1[MAX_SR],buf2[SR];
   float t,ds,dt;
 
@@ -142,6 +155,8 @@ main(argc,argv)
   else progname=argv[0];
   if(argc<4)
     {
+    WIN_version();
+    fprintf(stderr, "%s\n", rcsid);
     fprintf(stderr,
       " usage : '%s [in_key] [out_key] [shm_size(KB)] \\\n",
       progname);
@@ -151,10 +166,11 @@ main(argc,argv)
     }
   rawkey=atol(argv[1]);
   monkey=atol(argv[2]);
-  size_shm=atol(argv[3])*1000;
+  size_shm=(size_t)atol(argv[3])*1000;
   *chfile=0;
   logfile=NULL;
   rest=1;
+  eobsize_in = 0;
   exit_status = EXIT_SUCCESS;
   if(argc>4)
     {
@@ -207,30 +223,57 @@ reset:
   /*   shm->p=shm->c=0; */
   /*   shm->pl=(size_shm-sizeof(*shm))/10*9; */
   /*   shm->r=(-1); */
-  ptr=shr->d;
+  /* ptr=shr->d; */  /* verbose */
   while(shr->r==(-1)) sleep(1);
   ptr=shr->d+shr->r;
   tow=(-1);
+  
+  size = mkuint4(ptr);
+  if (mkuint4(ptr + size - 4) == size)
+    eobsize_in = 1;
+  else
+    eobsize_in = 0;
+  eobsize_in_count = eobsize_in;
+  snprintf(tb,sizeof(tb),"eobsize_in=%d",eobsize_in);
+  write_log(tb);
 
   for(;;)
     {
-    ptr_lim=ptr+(size=mkuint4(ptr_save=ptr));
+    size=mkuint4(ptr_save=ptr);
+    if (mkuint4(ptr+size-4) == size) {
+      eobsize_in_count++;
+      if (eobsize_in_count == 0)
+	eobsize_in_count = 1;
+    } else
+      eobsize_in_count=0;
+    if(eobsize_in && eobsize_in_count==0) {
+      write_log("reset1");
+      goto reset;
+    }
+    if(!eobsize_in && eobsize_in_count>3) {
+      write_log("reset2");
+      goto reset;
+    }
+    ptr_lim=ptr+size;
+    if(eobsize_in)
+      ptr_lim -= 4;
+
     c_save=shr->c;
     ptr+=4;
 #if DEBUG
-    for(i=0;i<6;i++) printf("%02X",ptr[i]);
-    printf(" : %d R\n",size);
+    for(i=0;i<15;i++) printf("%02X",ptr[i]);
+    printf(" : %u R\n",size);
 #endif
   /* make output data */
     ptw=shm->d+shm->p;
     ptw+=4;               /* size (4) */
-    uni=time(NULL);
+    uni=(uint32_w)(time(NULL)-TIME_OFFSET);
     i=uni-mkuint4(ptr);
     if(i>=0 && i<1440)   /* with tow */
       {
       if(tow!=1)
         {
-        sprintf(tb,"with TOW (diff=%ds)",i);
+	snprintf(tb,sizeof(tb),"with TOW (diff=%ds)",i);
         write_log(tb);
         if(tow==0)
           {
@@ -259,15 +302,22 @@ reset:
 
     do    /* loop for ch's */
       {
-      gh=mkuint4(ptr);
-      ch=(gh>>16)&0xffff;
-      sr=gh&0xfff;
-      if((gh>>12)&0xf) gs=((gh>>12)&0xf)*(sr-1)+8;
-      else gs=(sr>>1)+8;
+      /* gh=mkuint4(ptr); */
+      /* ch=(gh>>16)&0xffff; */
+      /* sr=gh&0xfff; */
+      /* if((gh>>12)&0xf) gs=((gh>>12)&0xf)*(sr-1)+8; */
+      /* else gs=(sr>>1)+8; */
+      gs = win_get_chhdr(ptr, &ch, &sr);
+      if (sr > MAX_SR) {
+	snprintf(tb,sizeof(tb),"MAX_SR exceeded: %d Hz",sr);
+	write_log(tb);
+	exit_status = EXIT_FAILURE;
+	end_program();
+      }
       if(ch_table[ch])
         {
 #if DEBUG
-        fprintf(stderr,"%5d",gs);
+        fprintf(stderr,"%5u",gs);
 #endif
         if(sr!=SR && sr>=SR_LOWER) 
           {
@@ -279,7 +329,7 @@ reset:
             {
             j=(int)t;
             dt=t-(float)j;
-            buf2[i]=buf1[j]+(int)(dt*(float)(buf1[j+1]-buf1[j]));
+            buf2[i]=buf1[j]+(int32_w)(dt*(float)(buf1[j+1]-buf1[j]));
             t+=ds;
             }
           ptw+=winform(buf2,ptw,SR,ch);
@@ -299,9 +349,9 @@ reset:
       } while(ptr<ptr_lim);
     if(tow) i=14;
     else i=10;
-    if((uni=ptw-(shm->d+shm->p))>i)
+    if((uni=(uint32_w)(ptw-(shm->d+shm->p)))>i)
       {
-      uni=ptw-(shm->d+shm->p);
+      /* uni=ptw-(shm->d+shm->p); */  /* verbose? */
       shm->d[shm->p  ]=uni>>24; /* size (H) */
       shm->d[shm->p+1]=uni>>16;
       shm->d[shm->p+2]=uni>>8;
@@ -309,7 +359,7 @@ reset:
 
 #if DEBUG
       for(i=0;i<6;i++) printf("%02X",shm->d[shm->p+4+i]);
-      printf(" : %d M\n",uni);
+      printf(" : %u M\n",uni);
 #endif
 
       shm->r=shm->p;
@@ -321,7 +371,7 @@ reset:
     fprintf(stderr,"\007");
     fflush(stderr);
 #endif
-    if((ptr=ptr_lim)>shr->d+shr->pl) ptr=shr->d;
+    if((ptr=ptr_save+size)>shr->d+shr->pl) ptr=shr->d;
     while(ptr==shr->d+shr->p) sleep(1);
     if(shr->c<c_save || mkuint4(ptr_save)!=size)
       {
